# CarelessDirect

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  DMSCConfig.cmake  INSTALL  LICENSE  ProjectPlan.md  README.md  SECURITY.md
cmake/: BuildInfo.cmake  CmakeBuildOptions.cmake  Coverage.cmake  Doxygen.cmake  GetGui.cmake  Install.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  Testing.cmake  UiFolder.cmake  buildinfo.h.in
include/: common_include.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/client/include/client/: client.h
src/gui/: CMakeLists.txt  gui.cpp  main.cpp
src/gui/include/: gui.h
src/gui/ui/: basic.ui
src/server/: CMakeLists.txt  server.cpp
src/server/include/server/: server.h
test/: CMakeLists.txt
test/client/: CMakeLists.txt  client_test.cpp
test/gui/: CMakeLists.txt  gui_test.cpp
test/server/: CMakeLists.txt  server_test.cpp
